[package]
name = "bloombot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
tokio = { version = "1.29.1", features = ["full"] }
pretty_env_logger = "0.5.0"
log = "0.4.19"
dotenv = "0.15.0"
